--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 </head>
 <body>
 
+<!-- Meta Tags for Discord / Social Embed -->
+<meta property="og:title" content="ByteBuilt – Premium Websites & Tools" />
+<meta property="og:description" content="Custom-built websites, branding & digital tools crafted for creators and businesses." />
+<meta property="og:url" content="https://bytebuilt.online" />
+<meta property="og:type" content="website" />
+<meta property="og:image" content="https://bytebuilt.online/assets/img/embed-preview.gif" />
+
   <!-- Header -->
   <header class="site-header">
     <div class="container">
