--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <meta property="og:url" content="https://bytebuilt.online" />
 <meta property="og:type" content="website" />
 <meta property="og:image" content="https://bytebuilt.online/assets/img/embed-preview.gif" />
-<meta name="theme-color" content="#99ff00" />
+<meta name="theme-color" content="#9b59b6" />
 
   <!-- Header -->
   <header class="site-header">
